# scippx

./: README.md  setup.cfg
src/scippx/: __init__.py  accessors.py  array_attr.py  array_index.py  array_property.py  bin_edge_array.py  list_array.py  multi_mask_array.py  scipp.py  uncertain_array.py  vector_array.py
tests/: array_index_test.py  array_property_test.py  bin_edge_array_test.py  list_array_test.py  masks_test.py  multi_mask_array_test.py  scipp_features_test.py  vector_array_test.py  vector_field_on_edges_test.py  xarray_behavior_test.py
