[metadata]
name = scippx
author = Scipp contributors (https://github.com/scipp)
description = Exploratory implementation of Scipp based on Xarray
license = BSD
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://scipp.github.io/scippx
project_urls =
    Bug Tracker = https://github.com/scipp/scippx/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy
    pint
    xarray @ git+https://github.com/pydata/xarray.git
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
scippx = py.typed

[flake8]
# See https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
max-line-length = 88
extend-ignore = E203

[yapf]
based_on_style = pep8
column_limit = 88
